argocd/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.grubis.cloud`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-server-tls-backend
  tls:
    secretName: letsencrypt-argocd-certificate
